--- a/index.html
+++ b/index.html
@@ -2,26 +2,118 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sport Club</title>
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" a href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
+    <title>SPORT CLUB</title>
 </head>
 <body>
-
     <header>
-        <nav>  
-            <img src="iconproduto.png" id="icon1">
-
-            <img src="3barra.png" id="barra">
+        <nav>
+            <img src="img/iconproduto.png">
+            <p> Home </p>
+            <p> Mapa </p>
+            <p> Comunidade </p>
+            <p> Perguntas </p>
+            <img src="img/barra.png">
         </nav>
     </header>
 
-    <main>
-        <p> CONHEÇA NOVOS LUGARES </p>
-        <p> ENTRE EM UMA COMUNIDADE </p>
-        <p> POR QUE FAZER ATIVIDADE FÍSICA </p>
+    <main> 
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/img carrossel.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/img carrossel 2.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+
+        <!-- <section class="carrossel">
+            <p> MAPA </p>
+        </section> -->
+
+        <section class="linkcomunidade">
+            <h2> COMUNIDADE </h2>
+
+            <p> A comunidade é forma de comunicação entre os usuários da plataforma, acessando ela, é possível que você se junte com amigos, ou até desconhecidos, para praticar algum esporte ou atividade! Crie um grupo ou entre em um para experimentar! </p>
+
+            <div>
+                <a> Veja Mais </a>
+            </div>
+        </section>
+
+        <section class="conscinetização">
+            <h2> POR QUE PRATICAR ATIVIDADE FÍSICA? </h2>
+
+            <clip> </clip>
+
+            <p> Conheça os benefícios de uma vida saudável e ativa!  </p>
+
+            <a> Veja Mais </a>
+        </section>
+
+        <section class="perguntas">
+            <h2> PERGUNTAS QUE VOCÊ POSSA SE INTERESSAR </h2>
+
+            <div> 
+                <p> Existem benefícios psicológicos na atividade física? </p>
+            </div>
+
+            <div> 
+                <p> Quais os malefícios da falta de atividade física? </p>
+            </div>
+
+            <div> 
+                <p> Quais esportes podem ser adaptados? </p>
+            </div>
+
+            <div> 
+                <p> Por quê jovens devem fazer esportes desde cedo? </p>
+            </div>
+        </section>
+
+        <section class="cadastro">
+            <h2> CADASTRE-SE </h2>
+
+            <div> 
+                <img src="img/iconproduto.png">
+                <p> Sport Club </p>
+            </div>
+
+            <input placeholder="Nome Completo">
+            <input placeholder="Email">
+            <input placeholder="Senha">
+            <input placeholder="Data de Nascimento">
+
+        </section>
 
     </main>
+
+    <footer>
+        
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 </body>
 </html>
